# Multimodal-AI-Production-System-Architect

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
arch_mind/api/: main.py  routes.py  websocket.py
arch_mind/architecture/: pattern_selector.py
arch_mind/code_generation/: template_engine.py
arch_mind/code_generation/templates/: docker_compose.yml.j2  fastapi_service.py.j2  main.tf.j2  requirements.txt.j2  sqlalchemy_models.py.j2
arch_mind/core/: config.py  database.py  schemas.py  telemetry.py
arch_mind/diagrams/: mermaid_generator.py
arch_mind/parsing/: image_parser.py  requirement_merger.py  text_parser.py
arch_mind/tests/: test_api.py  test_architecture.py  test_code_gen.py  test_diagrams.py  test_parsing.py  test_validation.py
arch_mind/validation/: consistency_checker.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: ArchitectureCanvas.tsx  CodePreview.tsx  RequirementInput.tsx  ServiceEditor.tsx  TradeoffPanel.tsx
migrations/: env.py
