[tool.poetry]
name = "arch-mind"
version = "0.1.0"
description = "Multimodal AI Code Architect"
authors = ["Jules <jules@example.com>"]
readme = "README.md"
packages = [{include = "arch_mind"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.104"}
uvicorn = {extras = ["standard"], version = "^0.24"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
sentence-transformers = "^2.2"
transformers = "^4.35"
torch = "^2.1"
jinja2 = "^3.1"
pytesseract = "^0.3"
pillow = "^10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.12"
redis = {extras = ["async"], version = "^5.0"}
httpx = "^0.25"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21"
respx = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
